# logus

./: .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  ecosystem.config.json  pyproject.toml  start.sh
.github/workflows/: deploy.yml
app/: __init__.py  main.py
app/templates/: agent.html  base.html  index.html
app/templates/partials/: analysis_tabs.html
blogus/: __init__.py  cli.py  core.py  web.py  web_cli.py
docs/: README.md  advanced.md  cli.md  contributing.md  core_concepts.md  getting_started.md  library.md  models.md  prompt_lifecycle.md  web_interface.md
docs/api/: README.md  cli.md  core.md  web.md
examples/: README.md  basic_analysis.py  basic_usage.py  cross_model.py  test_generation.py
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/: App.js  api.js
frontend/src/components/: Analysis.js  CodeEditor.js  ConsoleLog.js  GoalInput.js  ModelSelector.js  Output.js  Sidebar.js  TestPanel.js
logus/: __init__.py  cli.py  core.py  main.py  web.py  web_cli.py
logus/static/: index.html
tests/: __init__.py  test_cli.py  test_core.py  test_litellm_integration.py  test_web.py  test_web_cli.py  test_web_functionality.py
